--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ sqlx = { version = "0.6.2", features = [
     "uuid",
     "chrono",
     "migrate",
+    "offline",
 ], default-features = false }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.4.13", features = ["util"] }
