--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 config = "0.13.2"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.145", features = ["derive"] }
+serde-aux = "4.0.0"
 sqlx = { version = "0.6.2", features = [
     "runtime-tokio-rustls",
     "postgres",
