--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           POSTGRES_USER: admin
           POSTGRES_PASSWORD: admin
-          POSTGRES_DB: axum-zero2prod
+          POSTGRES_DB: newsletter
         ports:
           - 5432:5432
     env:
@@ -81,7 +81,7 @@ jobs:
         env:
           POSTGRES_USER: admin
           POSTGRES_PASSWORD: admin
-          POSTGRES_DB: axum-zero2prod
+          POSTGRES_DB: newsletter
         ports:
           - 5432:5432
     env:
