--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,14 @@ tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1.37"
 tracing-bunyan-formatter = "0.3.3"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+unicode-segmentation = "1.10.0"
 uuid = { version = "1.1.2", features = ["v4"], default-features = false }
+validator = "0.16.0"
 
 [dev-dependencies]
-fake = { version = "2.5.0", features = ["chrono", "uuid"] }
+fake = "~2.3"
 mime = "0.3.16"
 once_cell = "1.15.0"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
 serde_json = "1.0.85"
