--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ axum = "0.6.0-rc.2"
 axum-macros = "0.3.0-rc.1"
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 config = "0.13.2"
+hyper = { version = "0.14", features = ["full"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.145", features = ["derive"] }
 serde-aux = "4.0.0"
@@ -39,11 +40,12 @@ tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 unicode-segmentation = "1.10.0"
 uuid = { version = "1.1.2", features = ["v4"], default-features = false }
 validator = "0.16.0"
+serde_json = "1.0.85"
+mime = "0.3.16"
 
 [dev-dependencies]
 fake = "~2.3"
-mime = "0.3.16"
 once_cell = "1.15.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-serde_json = "1.0.85"
+wiremock = "0.5.14"
