--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,12 @@ validator = "0.16.0"
 serde_json = "1.0.85"
 mime = "0.3.16"
 
+[dependencies.reqwest]
+version = "0.11.2"
+default-features = false
+# We need the `json` feature flag to serialize/deserialize JSON payloads
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
 fake = "~2.3"
 once_cell = "1.15.0"
