--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ features = ["json", "rustls-tls"]
 
 [dev-dependencies]
 fake = "~2.3"
+linkify = "0.9.0"
 once_cell = "1.15.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
