--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ uuid = { version = "1.1.2", features = ["v4"], default-features = false }
 validator = "0.16.0"
 serde_json = "1.0.85"
 mime = "0.3.16"
+rand = { version = "0.8.5", features = ["std_rng"] }
 
 [dependencies.reqwest]
 version = "0.11.2"
